Oppdatert, rettet feil